[tool.poetry]
name = "phoru-HeuronPatapon"
version = "1.0.1"
description = "Phonological rule processing."
authors = ["Heuron <heuron-patapon@laposte.net>"]
packages = [
    { include = "hpat/phoru", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
ezre_heuronpatapon = {url = "https://github.com/HeuronPatapon/ezre/releases/download/1.3.1/ezre_heuronpatapon-1.3.1-py3-none-any.whl"}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jq = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
